align about fix

--- a/src/components/About/About.scss
+++ b/src/components/About/About.scss
@@ -1,39 +1,17 @@
 @import '../../index.scss';
 
 
-header {
-    br {
-        display: none;
-    }
-
-    &.major {
-        padding-bottom: 2em;
-    }
-
-    &.special {
-        padding-left: 2.5em;
-        padding-right: 2.5em;
-    }
-}
-
 h1, h2, h3, h4, h5, h6 {
     color: inherit;
     font-weight: 300;
-    line-height: 1.75em;
-    margin-bottom: 1em;
+    line-height: 1.75rem;
+    margin-bottom: 1rem;
     text-transform: uppercase;
-
-    a {
-        color: inherit;
-        text-decoration: none;
-        border: 0;
-    }
 }
 
 .main {
     display: flex;
     justify-content: center;
-
     border-radius: 0.4rem;
     margin: 0rem 0;
     padding: 5rem 0;
@@ -42,24 +20,14 @@ h1, h2, h3, h4, h5, h6 {
     h2{
         text-transform: uppercase;
         color: $darkBlue;
-    }
-    
+    } 
 }
 
-@media screen and (min-width:768px){
-    .main {
-        width: 95%;
-    }
+.container{
+    padding: 1rem;
+    max-width: 900px;
+    background-color: $primaryGrey;
 }
-@media screen and (min-width:992px){
-    .main {
-        width: 960px;
-    }
-}
-@media screen and (min-width:1140px){
-    .main {
-        width: 1200px;
-    }
-}
+
 
 
